src/test/ui/self/elision/ref-mut-struct.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:14:9
   |
LL |     fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                                         ----     ----
   |                                         |
   |                                         this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:18:9
   |
LL |     fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                                  ----     ----
   |                                                  |
   |                                                  this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:22:9
   |
LL |     fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                                  ----     ----
   |                                                  |
   |                                                  this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:26:9
   |
LL |     fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                                           ----     ----
   |                                                           |
   |                                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:30:9
   |
LL |     fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                                           ----     ----
   |                                                           |
   |                                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error: aborting due to 5 previous errors

